--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,34 @@
   padding: 0;
 }
 
+/*Scroll*/
+
+html{
+  scroll-behavior: smooth;
+}
+
+.gotopbtn {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  background: #335cb4;
+  bottom: 40px;
+  right: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  color: white;
+  font-size: 22px;
+  border-radius: 30px;
+}
+
+.gotopbtn:hover {
+  background-color: rgb(35, 57, 131);
+  transition: 1s;
+  color: rgb(0, 255, 255);
+  border: 1px black;
+}
+
 
 img {
   display: block;
